# to STIki code/functionality by release-version (build-date).
#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.x., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2013-08-19
      # EMERGENCY RELEASE: The following security change by WMF developers:
        [http://lists.wikimedia.org/pipermail/wikitech-l/2013-August/071266.html]
        completely broke how login cookies are parsed in STiki (and most
        other applications, I have to imagine). This caused the edit/rollback
        tokens requested to be invalid under server checks, causing all
        edits to fail with a "badtoken" response. Every user will need
        to upgrade their STiki distribution.
      # Default revert comments were changed to note the quantity of edits
        reverted, with always correct plurality. This is done via the "#q#" 
        (quantity) and "#s#" placeholders (plurality switch) now interpreted
        by the "edit comment" panel.
  
  * 2013-05-23
      # Fixes to the AGF message dialogue (T#025). One can now abandon the
        revert action after the dialogue has been displayed, and checks
        ensure that the customized message will not be placed if the
        revert fails. Both edits (the revert and the message) commit 
        after the message has been authored. 
      # The AGF message dialogue has been updated with the modifications
        made by users at [[WP:STiki/Good-faith-revert_messages]]. Similarly,
        the number of user customizable messages has increased from 2 to 4.
      # The space bar is now disabled when the "classification panel" has 
        focus (most of the time). Previously, pressing spacebar would repeat 